kubernetes/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: survey-app-pod
  labels:
    app: survey
spec:
  containers:
  - name: survey-container
    image: hansyy/survey-app:v4   # Updated to v4
    ports:
    - containerPort: 8080
