kubernetes/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: survey-external-service
spec:
  type: NodePort
  selector:
    app: survey
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30000  # You can pick a port between 30000-32767
